Adición de scripts actualizados

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -28,10 +28,19 @@ Library},
   publisher={Universitat Polit{\`e}cnica de Val{\`e}ncia}
 }
 @article{metropolizaccaomercado,
-  title={Mercado inmobiliario y la producci{\'o}n del archipi{\'e}lago metropolitano. La metropolizaci{\'o}n de Cali Real estate market and the production of the metropolitan archipelago.},
-  author={metropoliza{\c{c}}{\~a}o de Cali, A and Mart{\'\i}nez-Toro, Pedro Mart{\'\i}n}
+  title={Mercado inmobiliario y la producci{\'o}n del archipi{\'e}lago metropolitano.},
+  author={Mart{\'\i}nez-Toro, Pedro Mart{\'\i}n}
 }
 @thesis{oportunidadnegocio,
   title={EL NEGOCIO DEL SECTOR INMOBILIARIO EN SANTIAGO DE CALI.?` UN},
   author={OPORTUNIDAD, RIESGO O UNA and OSORIO, DIANA GARC{\'I}A}
+}
+@article{zhang2015missing,
+  title={Missing data exploration: highlighting graphical presentation of missing pattern},
+  author={Zhang, Zhongheng},
+  journal={Annals of translational medicine},
+  volume={3},
+  number={22},
+  year={2015},
+  publisher={AME Publications}
 }
